[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/PixelOperator8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/hour5.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Lobby.gd" type="Script" id=3]
[ext_resource path="res://themes/MenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://sprites/background.png" type="Texture" id=5]
[ext_resource path="res://fonts/PixelOperator8-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.737255, 0.392157, 0.878431, 0.196078 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.956863, 0.2, 0.2, 0.282353 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.247059, 0.458824, 0.572549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.5
margin_top = -22.0
margin_right = 92.5
grow_vertical = 0
theme = ExtResource( 4 )
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuButtons"]
margin_right = 185.0
margin_bottom = 86.0
custom_constants/separation = 10

[node name="PlayOffline" type="Button" parent="MenuButtons/VBoxContainer"]
margin_right = 185.0
margin_bottom = 22.0
text = "PLAY OFFLINE"

[node name="Multiplayer" type="Button" parent="MenuButtons/VBoxContainer"]
margin_top = 32.0
margin_right = 185.0
margin_bottom = 54.0
text = "MULTIPLAYER"

[node name="Exit" type="Button" parent="MenuButtons/VBoxContainer"]
margin_top = 64.0
margin_right = 185.0
margin_bottom = 86.0
text = "QUIT GAME"

[node name="SPGame" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.5
margin_top = -22.0
margin_right = 92.5
grow_vertical = 0
theme = ExtResource( 4 )
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SPGame"]
margin_right = 185.0
margin_bottom = 54.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SPGame/VBoxContainer"]
margin_right = 185.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="SPGame/VBoxContainer/HBoxContainer"]
margin_top = 7.0
margin_right = 44.0
margin_bottom = 15.0
text = "SKILL:"

[node name="DifficultySP" type="OptionButton" parent="SPGame/VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 115.0
margin_bottom = 22.0
text = "SKILL"

[node name="StartSP" type="Button" parent="SPGame/VBoxContainer"]
margin_top = 32.0
margin_right = 185.0
margin_bottom = 54.0
text = "START GAME"

[node name="Lobby" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -134.0
margin_right = 97.0
grow_vertical = 0
theme = ExtResource( 4 )
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="PanelContainer" parent="Lobby"]
margin_right = 189.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Lobby/panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 187.0
margin_bottom = 122.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="vbox" type="VBoxContainer" parent="Lobby/panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 180.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="Title" type="Label" parent="Lobby/panel/MarginContainer/vbox"]
margin_right = 175.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.721569, 0.690196, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Player list:"

[node name="Players" type="Label" parent="Lobby/panel/MarginContainer/vbox"]
margin_top = 13.0
margin_right = 175.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 45 )
text = "Player 1
Player 2
Player 3
Player 4"

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby/panel/MarginContainer/vbox"]
margin_top = 63.0
margin_right = 175.0
margin_bottom = 87.0

[node name="Difficulty" type="OptionButton" parent="Lobby/panel/MarginContainer/vbox/HBoxContainer"]
margin_right = 61.0
margin_bottom = 24.0
text = "Easy"

[node name="SharedLives" type="CheckBox" parent="Lobby/panel/MarginContainer/vbox/HBoxContainer"]
margin_left = 65.0
margin_right = 175.0
margin_bottom = 24.0
text = "Share Lives"

[node name="StartGame" type="Button" parent="Lobby/panel/MarginContainer/vbox"]
margin_top = 92.0
margin_right = 175.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 18 )
custom_fonts/font = SubResource( 4 )
text = "START"

[node name="Multiplayer" type="VBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -126.0
margin_right = -60.0
margin_bottom = -10.0
grow_vertical = 0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerContainer" type="HBoxContainer" parent="Multiplayer"]
margin_right = 200.0
margin_bottom = 20.0

[node name="NickLabel" type="Label" parent="Multiplayer/PlayerContainer"]
margin_top = 6.0
margin_right = 69.0
margin_bottom = 14.0
text = "NICKNAME:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextEdit" parent="Multiplayer/PlayerContainer"]
margin_left = 73.0
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostServer" type="Button" parent="Multiplayer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 20 )
text = "Host a Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxClientsContainer" type="HBoxContainer" parent="Multiplayer"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 70.0

[node name="MaxLabel" type="Label" parent="Multiplayer/MaxClientsContainer"]
margin_top = 6.0
margin_right = 89.0
margin_bottom = 14.0
text = "Max Players:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxClients" type="TextEdit" parent="Multiplayer/MaxClientsContainer"]
margin_left = 93.0
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="Multiplayer"]
margin_top = 74.0
margin_right = 200.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 20 )
text = "Join Game"

[node name="IPContainer" type="HBoxContainer" parent="Multiplayer"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 120.0

[node name="IPLabel" type="Label" parent="Multiplayer/IPContainer"]
margin_top = 6.0
margin_right = 72.0
margin_bottom = 14.0
text = "Server IP:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP" type="TextEdit" parent="Multiplayer/IPContainer"]
margin_left = 76.0
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
text = "localhost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -89.0
margin_right = 94.0
margin_bottom = 37.0
grow_horizontal = 2
custom_constants/margin_top = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="LogoContainer"]
margin_top = 5.0
margin_right = 183.0
margin_bottom = 37.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Space Schmup"
align = 1
uppercase = true

[node name="Back" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -20.0
margin_right = -6.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
